deploy/kubernetes/kustomize/base/postgres.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  labels:
    app: queuecraft-postgres
    team: infra
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: queuecraft-postgres
  template:
    metadata:
      labels:
        app: queuecraft-postgres
        team: infra
    spec:
      imagePullSecrets:
        - name: regcred
      securityContext:
        fsGroup: 999
      containers:
        - name: postgres
          image: srvnexusint.hopital.chdn.lan:8443/postgres:16.4-alpine
          ports:
            - name: postgres
              containerPort: 5432
          readinessProbe:
            exec:
              command: [sh, -c, "pg_isready -U \"$POSTGRES_USER\" -d \"$POSTGRES_DB\""]
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            exec:
              command: [sh, -c, "pg_isready -U \"$POSTGRES_USER\" -d \"$POSTGRES_DB\""]
            initialDelaySeconds: 20
            periodSeconds: 20
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
              subPath: postgres
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: queuecraft-postgres-data
