deploy/kubernetes/kustomize/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    team: infra
spec:
  selector:
    app: queuecraft-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: queuecraft-api
  labels:
    team: infra
spec:
  selector:
    app: queuecraft-api
  ports:
    - name: http
      port: 8080
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: queuecraft-web
  labels:
    team: infra
spec:
  selector:
    app: queuecraft-web
  ports:
    - name: http
      port: 80
      targetPort: http
